# study

./: .gitignore  build.bat  run_tests.bat
projects/: CMakeLists.txt
projects/20260214_long_number/: CmakeLists.txt
projects/20260214_long_number/src/: CmakeLists.txt  long_number.cpp  long_number.hpp
projects/20260214_long_number/test/: CmakeLists.txt  test_long_number.cpp
projects/251003_app/: CMakeLists.txt  build_run_module_app.bat
projects/251017_refactoring/: CMakeLists.txt  after_refactoring_1.cpp  after_refactoring_5.cpp  after_refactoring_5_dont_watch.cpp
projects/251128_class_menu/: CMakeLists.txt  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
projects/251128_home_menu/: CMakeLists.txt  README.md  build_run_module_app.bat  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
projects/until_test_example/: CMakeLists.txt
projects/until_test_example/src/: CMakeLists.txt  io.cpp  io.hpp  main.cpp  sortings.cpp
projects/until_test_example/test/: CMakeLists.txt  test_bubble.cpp
